# AI-Coding-Guidance-Skills

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  README_CN.md  pyproject.toml  runner.py  setup_check.py
.claude/: ecc-tools.json  identity.json  settings.json
.claude/commands/: feature-development-with-task-tracking.md  feature-development.md  test-suite-expansion-and-coverage-increase.md
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.kiro/steering/: conventions.md
automation/: run_collector.bat  run_collector.sh
docs/: USAGE.md  api-reference.md  architecture.md  demo-script.md  demo.md  evolution-guide.md
examples/: validate_all.sh
examples/api_service/: goal.md  run.sh
examples/cli_tool/: goal.md  run.sh
examples/demo-showcase/: README.md  goal.md  run.sh
examples/todo_app/: goal.md  run.sh
kernel/: BOOT.md  __init__.py  atomic_write.py  bootstrap.py  capability_assessment.py  cli.py  complexity_assessor.py  constitution.md  context_assembler.py  context_budget.py  error_messages.py  event_detector.py  feedback_loop.py  file_lock.py  graph.yaml  graph_executor.py  init.py  intent_analyzer.py  lifecycle_guard.py  logging_config.py  mode3_executor.py  orchestrator.py  output_writer.py  phase_router.py  project_history.py  reflector.py  reporter.py  security_policy.py  session_tracker.py  skill_accumulator.py  skill_factory.py  skill_feedback.py  skill_selector.py  skill_triggers.py  state.yaml  task_manager.py  validators.py  workflow_bridge.py  workspace_bootstrap.py
kernel/adapters/: ralph_adapter.py
kernel/contracts/: __init__.py  mode2_protocol.md  output_format.md  plan_format.md  state_transitions.md
kernel/evolution/: __init__.py  engine.py  graph_advisor.py  historian.py  metrics.py
kernel/execution/: __init__.py  autonomous.py  dry_run.py  protocol.py
kernel/migrations/: __init__.py  base.py  m001_initial_schema.py  m002_add_provider_fields.py  registry.py  runner.py
kernel/philosophy/: dao.md  guards.py  principles.py  strategy.md
kernel/prompts/: coder.md  orchestrator.md  planner.md  reflector.md  reviewer.md  tester.md
kernel/providers/: __init__.py  anthropic_provider.py  base.py  cli_provider.py  factory.py  openai_provider.py  subprocess_provider.py
knowledge/: __init__.py  skill_composer.py  store.py
memory/: __init__.py  assessment.yaml  current_goal.md  decisions.jsonl  plan.md  progress.yaml  reflections.jsonl  session_events.jsonl  state_manager.py  tasks.yaml
scripts/: README.md  api_bridge.py
skills/: _index.yaml
skills/relentless-iteration/: SKILL.md
skills/ux-audit/: SKILL.md
tests/: __init__.py  conftest.py  test_adversarial_paths.py  test_api_bridge.py  test_auto_reset.py  test_capability_assessment.py  test_complexity_assessor.py  test_context_assembler_enhanced.py  test_context_assembler_truncation.py  test_context_budget.py  test_context_tiering.py  test_contract_validation.py  test_contracts.py  test_contracts_robust_parsing.py  test_coverage_gaps.py  test_error_messages.py  test_error_recovery.py  test_event_detector.py  test_evolution.py  test_examples.py  test_feedback_loop.py  test_file_lock.py  test_graceful_shutdown.py  test_graph_advisor.py  test_graph_executor.py  test_historian.py  test_incremental_context.py  test_init.py  test_integration.py  test_intent_analyzer.py  test_kernel.py  test_knowledge.py  test_lifecycle_guard.py  test_lightweight_retry.py  test_live_evolution.py  test_logging_config.py  test_memory.py  test_migrations.py  test_mode2_protocol.py  test_mode3_subprocess.py  (+27 more)
tests/e2e/: mock_ai_server.py  test_full_cycle.py
tests/fixtures/: live_scenarios.yaml
web/: __init__.py  app.py
web/templates/: dashboard.html
workspace/-api/: app.db  main.py  requirements.txt
workspace/add-user-login-page/: CLAUDE.md
workspace/build-a-rest-api/: CLAUDE.md
workspace/completely-different-goal/: CLAUDE.md
workspace/context-test/: CLAUDE.md
workspace/create-a-calculator/: CLAUDE.md
workspace/create-hellopy-that-prints-hello-world/: CLAUDE.md
workspace/custom-project/: CLAUDE.md
workspace/deploy-kubernetes-cluster-monitoring/: CLAUDE.md
workspace/fix-another-bug/: CLAUDE.md
workspace/fix-the-bug/: CLAUDE.md
workspace/hello-world/: CLAUDE.md
workspace/integration-test/: CLAUDE.md
workspace/new-goal/: CLAUDE.md
workspace/previous-goal/: CLAUDE.md
workspace/rest-api-testing/: CLAUDE.md
workspace/test-backoff/: CLAUDE.md
workspace/test-backoff-cap/: CLAUDE.md
workspace/test-bad-transition/: CLAUDE.md
workspace/test-cap/: CLAUDE.md
workspace/test-cmd-not-found/: CLAUDE.md
workspace/test-continue/: CLAUDE.md
workspace/test-contract-invalid/: CLAUDE.md
workspace/test-contract-valid/: CLAUDE.md
workspace/test-error-recording/: CLAUDE.md
workspace/test-failure-and-retry/: CLAUDE.md
workspace/test-failure-feedback/: CLAUDE.md
workspace/test-fallback/: CLAUDE.md
workspace/test-fallback-mode/: CLAUDE.md
workspace/test-fallback-warning/: CLAUDE.md
workspace/test-feedback/: CLAUDE.md
workspace/test-fresh-assessment/: CLAUDE.md
workspace/test-lightweight/: CLAUDE.md
workspace/test-loop/: CLAUDE.md
workspace/test-mode3/: CLAUDE.md
workspace/test-node-traversal/: CLAUDE.md
(+145 files in other folders)
