[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coding-guidance-skills"
version = "0.1.0"
description = "Self-evolving AI development kernel"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0", "fastapi>=0.100", "uvicorn>=0.20", "websockets>=11.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "httpx>=0.24", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
include = ["kernel*", "memory*", "skills*", "knowledge*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
