[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coding-guidance-skills"
version = "0.1.0"
description = "Self-evolving AI development kernel"
requires-python = ">=3.11"
authors = [{name = "AI Coding Guidance Skills Contributors"}]
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = ["ai", "coding", "development", "kernel", "automation", "workflow", "skills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml>=6.0", "fastapi>=0.100", "uvicorn>=0.20", "websockets>=11.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "httpx>=0.24", "ruff>=0.4", "mypy>=1.10", "build>=1.0", "pre-commit>=3.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]

[project.urls]
Homepage = "https://github.com/killeroppo2/AI-Coding-Guidance-Skills"
Repository = "https://github.com/killeroppo2/AI-Coding-Guidance-Skills"
Issues = "https://github.com/killeroppo2/AI-Coding-Guidance-Skills/issues"

[project.scripts]
ai-kernel = "runner:main"

[tool.setuptools.packages.find]
include = ["kernel*", "memory*", "skills*", "knowledge*", "web*"]

[tool.setuptools.package-data]
kernel = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "E741"]
"skills/**" = ["E501"]
"workspace/**" = ["E501", "E721"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
